--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <div id="resultId"></div>
+    <h2>you're Home</h2>
     <script src="./script/code.js"></script>
 </body>
 </html>
